[package]
name = "management_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-multipart = "0.5.0"
actix-web = "4.2.1"
futures-util = "0.3.25"
image = "0.24.5"
mime = "0.3.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.24.1", features = ["fs"] }
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }

log = "0.4"
env_logger = "0.9"